--- a/classes/rms-beta-skills.css
+++ b/classes/rms-beta-skills.css
@@ -30,6 +30,7 @@ body {
     font-family: Verdana, sans-serif;
     font-size: 0.9em;
     font-weight: bold;
+    text-align: center;
     width: 20%;
 }
 .column_value_numeric {
